crates/query/src/snapshots/kcl_query__tests__list_variables-32.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "job.name": [
    {
      "name": "name",
      "type_name": "",
      "op_sym": "=",
      "value": "\"{}-{}\".format(\"app\", \"test\").lower()",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
