crates/query/src/snapshots/kcl_query__tests__list_variables-37.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "main.item": [
    {
      "name": "item",
      "type_name": "",
      "op_sym": ":",
      "value": "{\"a\": 1} + {\"b\": 2}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "a",
          "value": {
            "name": "a",
            "type_name": "",
            "op_sym": ":",
            "value": "1",
            "list_items": [],
            "dict_entries": []
          }
        },
        {
          "key": "b",
          "value": {
            "name": "b",
            "type_name": "",
            "op_sym": ":",
            "value": "2",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ]
}
