crates/query/src/snapshots/kcl_query__tests__list_variables-5.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "b2": [
    {
      "name": "b2",
      "type_name": "",
      "op_sym": "=",
      "value": "False",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
