crates/query/src/snapshots/kcl_query__tests__list_variables-6.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "s1": [
    {
      "name": "s1",
      "type_name": "",
      "op_sym": "=",
      "value": "\"Hello\"",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
