crates/query/src/snapshots/kcl_query__tests__list_variables-7.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "array1": [
    {
      "name": "array1",
      "type_name": "",
      "op_sym": "=",
      "value": "[\n    1\n    2\n    3\n]",
      "list_items": [
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "1",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "2",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "3",
          "list_items": [],
          "dict_entries": []
        }
      ],
      "dict_entries": []
    }
  ]
}
